--- a/WeekFlex/app/src/main/res/layout/todo_main_fragment.xml
+++ b/WeekFlex/app/src/main/res/layout/todo_main_fragment.xml
@@ -1,53 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@color/black">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/header_todo"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/black"
-        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@id/body_todo"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/body_todo"
-        android:orientation="vertical">
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:id="@+id/dateToday_todo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="2월 6일, 토요일"
-            android:fontFamily="@font/maaxbold"
-            android:textStyle="bold"
-            android:textSize="24sp"
-            android:textColor="@color/white"
-            android:letterSpacing="-0.01"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="24dp"
-            android:layout_marginTop="80dp" />
+            android:layout_marginTop="80dp"
+            android:fontFamily="@font/maaxbold"
+            android:letterSpacing="-0.01"
+            android:text="2월 6일, 토요일"
+            android:textColor="@color/white"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            app:layout_constraintBottom_toBottomOf="@id/header_todo"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginBottom="32dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:id="@+id/weekHeader_recylerview"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:nestedScrollingEnabled="false"
-            android:overScrollMode="never"
-            android:visibility="visible"
-            android:orientation="horizontal" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/weekHeader_recylerview"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="32dp"
+        android:nestedScrollingEnabled="false"
+        android:orientation="horizontal"
+        android:overScrollMode="never"
+        android:visibility="visible"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="@id/header_todo"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/body_todo"
@@ -65,21 +66,22 @@
             android:id="@+id/addTodoImg_todo"
             android:layout_width="132dp"
             android:layout_height="132dp"
+            android:layout_marginLeft="121dp"
+            android:layout_marginTop="106dp"
+            android:layout_marginRight="107dp"
             android:src="@drawable/sadgraycharacter"
-            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="visible"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginLeft="121dp"
-            android:layout_marginRight="107dp"
-            android:layout_marginTop="106dp"
-            android:visibility="visible"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
         <TextView
             android:id="@+id/addTodoMent_todo"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="93dp"
-            android:layout_marginRight="93dp"
             android:layout_marginTop="8dp"
+            android:layout_marginRight="93dp"
             android:gravity="center_horizontal"
             android:letterSpacing="-0.01"
             android:text="오늘의 목표를 추가해주세요"
@@ -104,14 +106,15 @@
             tools:listitem="@layout/todo_routine_home_view" />
 
 
-    <View
-        android:id="@+id/blackOpacityView_todo"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/black"
-        android:alpha="0.5"
-        android:visibility="invisible"/>
+        <View
+            android:id="@+id/blackOpacityView_todo"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.5"
+            android:background="@color/black"
+            android:visibility="invisible" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <Button
         android:id="@+id/addBtn_todo"
         android:layout_width="60dp"
@@ -126,12 +129,13 @@
         android:id="@+id/addBtnImg_todo"
         android:layout_width="32dp"
         android:layout_height="32dp"
+        android:elevation="10dp"
         android:src="@drawable/plusbutton"
+        app:layout_constraintBottom_toBottomOf="@id/addBtn_todo"
         app:layout_constraintLeft_toLeftOf="@id/addBtn_todo"
         app:layout_constraintRight_toRightOf="@id/addBtn_todo"
-        app:layout_constraintTop_toTopOf="@id/addBtn_todo"
-        app:layout_constraintBottom_toBottomOf="@id/addBtn_todo"
-        android:elevation="10dp"/>
+        app:layout_constraintTop_toTopOf="@id/addBtn_todo" />
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/addTodoView_todo"
         android:layout_width="wrap_content"
@@ -165,60 +169,63 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="할 일 추가하기"
+            android:layout_marginRight="13dp"
             android:fontFamily="@font/applesdgothicneo"
+            android:text="할 일 추가하기"
             android:textColor="@color/white"
             android:textSize="18dp"
             android:textStyle="bold"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toLeftOf="@id/addTodoBtn_todo"
-            android:layout_marginRight="13dp"
-            android:visibility="visible"/>
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/addRoutineView_todo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:visibility="gone"
-        app:layout_constraintTop_toTopOf="@id/addBtn_todo"
-        app:layout_constraintRight_toRightOf="@id/addBtn_todo">
+        app:layout_constraintRight_toRightOf="@id/addBtn_todo"
+        app:layout_constraintTop_toTopOf="@id/addBtn_todo">
+
         <Button
             android:id="@+id/addRoutineBtn_todo"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="@drawable/black_getroutine_btn"
             android:visibility="visible"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent" />
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <ImageView
             android:id="@+id/addRoutineBtnImg_todo"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:visibility="visible"
+            android:elevation="10dp"
             android:src="@drawable/getroutinebutton"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@id/addRoutineBtn_todo"
             app:layout_constraintLeft_toLeftOf="@id/addRoutineBtn_todo"
             app:layout_constraintRight_toRightOf="@id/addRoutineBtn_todo"
-            app:layout_constraintTop_toTopOf="@id/addRoutineBtn_todo"
-            app:layout_constraintBottom_toBottomOf="@id/addRoutineBtn_todo"
-            android:elevation="10dp"/>
+            app:layout_constraintTop_toTopOf="@id/addRoutineBtn_todo" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="루틴 가져오기"
+            android:layout_marginRight="13dp"
             android:fontFamily="@font/applesdgothicneo"
+            android:text="루틴 가져오기"
             android:textColor="@color/white"
             android:textSize="18dp"
             android:textStyle="bold"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintRight_toLeftOf="@id/addRoutineBtn_todo"
-            android:layout_marginRight="13dp"
-            android:visibility="visible"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
