--- a/WeekFlex/app/src/main/res/values/styles.xml
+++ b/WeekFlex/app/src/main/res/values/styles.xml
@@ -20,4 +20,9 @@
         <item name="android:background">@drawable/rounded_dialog</item>
     </style>
 
+    <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/bottom_in</item>
+        <item name="android:windowExitAnimation">@anim/bottom_out</item>
+    </style>
+
 </resources>
