--- a/WeekFlex/app/src/main/res/layout/routine_item_content.xml
+++ b/WeekFlex/app/src/main/res/layout/routine_item_content.xml
@@ -1,10 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
+<com.chauthai.swipereveallayout.SwipeRevealLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/todo_routine_home_view_layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:layout_marginBottom="8dp"
+    app:dragEdge="right"
+    app:mode="same_level">
+    <FrameLayout
+        android:layout_width="164dp"
+        android:layout_height="match_parent"
+        >
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        <ImageButton
+            android:id="@+id/modifyRoutine_routineList"
+            android:layout_width="84dp"
+            android:layout_height="match_parent"
+            android:background="@color/modifyPink"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            app:srcCompat="?attr/selectableItemBackgroundBorderless" />
+
+        <ImageView
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_gravity="center"
+            app:layout_constraintTop_toTopOf="@id/modifyRoutine_routineList"
+            app:layout_constraintBottom_toBottomOf="@id/modifyRoutine_routineList"
+            app:layout_constraintLeft_toLeftOf="@id/modifyRoutine_routineList"
+            app:layout_constraintRight_toRightOf="@id/modifyRoutine_routineList"
+            app:srcCompat="@drawable/edit_icon" />
+            <ImageButton
+                android:id="@+id/deleteRoutine_routineList"
+                android:layout_width="84dp"
+                android:layout_height="match_parent"
+                android:background="@drawable/pink_routineitem_corner_background"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/modifyRoutine_routineList"
+                android:adjustViewBounds="true"
+                android:scaleType="fitCenter"
+                app:srcCompat="?attr/selectableItemBackgroundBorderless" />
+
+            <ImageView
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center"
+                app:layout_constraintTop_toTopOf="@id/deleteRoutine_routineList"
+                app:layout_constraintBottom_toBottomOf="@id/deleteRoutine_routineList"
+                app:layout_constraintLeft_toLeftOf="@id/deleteRoutine_routineList"
+                app:layout_constraintRight_toRightOf="@id/deleteRoutine_routineList"
+                app:srcCompat="@drawable/icon_40_delete_white" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </FrameLayout>
+
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="90dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="8dp"
-    android:background="@color/black">
+    android:background="@drawable/black_routineitem_corner_background">
     <ImageView
         android:id="@+id/routinelist_item_routineImg"
         android:layout_width="24dp"
@@ -45,3 +107,5 @@
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginRight="16dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</com.chauthai.swipereveallayout.SwipeRevealLayout>
