--- a/WeekFlex/app/src/main/res/values/colors.xml
+++ b/WeekFlex/app/src/main/res/values/colors.xml
@@ -14,6 +14,9 @@
     <color name="white">#ffffff</color>
     <color name="yellowBorder">#f9eb88</color>
     <color name="mintBorder">#6ec9c4</color>
+    <color name="modifyPink">#ff9999</color>
+    <color name="color1">#ff6868</color>
+
 
     <string-array name="colors">
         <item>#FB4F55</item>
