--- a/WeekFlex/app/src/main/res/layout/activity_complete_make_routine.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_complete_make_routine.xml
@@ -72,7 +72,7 @@
         android:background="@color/white"
         android:id="@+id/completeRoutine_categoryheader"
         android:layout_width="match_parent"
-        android:layout_height="102dp"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/makeRoutine_topheader"
         app:layout_constraintLeft_toLeftOf="parent"
         android:focusableInTouchMode="true">
