--- a/WeekFlex/app/src/main/res/anim/bottom_in.xml
+++ b/WeekFlex/app/src/main/res/anim/bottom_in.xml
@@ -3,8 +3,8 @@
 
     <translate
         android:duration="@android:integer/config_mediumAnimTime"
-        android:fromYDelta="100%"
+        android:fromYDelta="0"
         android:interpolator="@android:anim/accelerate_interpolator"
-        android:toYDelta="100" />
+        android:toYDelta="0" />
 
 </set>
