--- a/WeekFlex/app/src/main/res/layout/all_category_color_list_layout.xml
+++ b/WeekFlex/app/src/main/res/layout/all_category_color_list_layout.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="300dp"
     style="@style/DialogAnimation"
     android:orientation="vertical"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
