--- a/WeekFlex/app/src/main/res/layout/activity_withdrawal_first_acitivity.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_withdrawal_first_acitivity.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".Activity.WithdrawalFirstAcitivity">
+    tools:context=".Activity.WithdrawalFirstActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/head_withdrawal"
         android:layout_width="match_parent"
