--- a/WeekFlex/app/src/main/res/layout/activity_withdrawal_second.xml
+++ b/WeekFlex/app/src/main/res/layout/activity_withdrawal_second.xml
@@ -197,6 +197,7 @@
             android:layout_marginTop="13dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
+            android:hint="탈퇴 사유를 남겨주세요.\n향후 서비스 개선을 위해 노력하겠습니다."
             android:gravity="top|left"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -215,6 +216,7 @@
         android:textColor="@color/white"
         android:textSize="16dp"
         android:textStyle="bold"
+        android:maxLength="69"
         android:gravity="center"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
